# dumb-pelican-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: credentials.rs  error.rs  logging.rs  main.rs  pelican.rs  transfer.rs
