[package]
name = "dumb_pelican_client"
description = "Simplistic Pelican client for http-OAuth2 transfers"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5.53", features = ["derive", "unicode", "wrap_help"] }
httpmock = { version = "0.8.2", features = ["http2"] }
log = "0.4.29"
log4rs = { version = "1.3.0", default-features = false, features = ["chrono", "compound_policy", "console_appender", "console_writer", "delete_roller", "file_appender", "fixed_window_roller", "pattern_encoder", "rolling_file_appender", "size_trigger", "time_trigger"] }
memoize = { version = "0.5.1", default-features = false }
rand = "0.9.2"
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "charset", "http2", "json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
stderrlog = "0.6.0"
temp-env = "0.3.6"
tempfile = "3.23.0"
